--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,15 +4,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-
+<!--Menu bar lateral -->
 <app-header></app-header>
-<!-- Muestra el contenido de las rutas -->
+<!--Las demás rutas -->
 <router-outlet></router-outlet>
 
-<!-- Footer -->
-<!-- <footer>
-  <p>© 2024 Mi Aplicación de Películas</p>
-</footer> -->
 
 <!-- Modal de Login, se abre solo si isModalOpen es true -->
 <!-- <app-login-modal *ngIf="isModalOpen" (close)="closeModal()"></app-login-modal> -->
