--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -11,7 +11,7 @@
     <button type="submit" [disabled]="!inicioForm.valid">Iniciar Sesión</button>
   </form>
   <br>
-  <button class="btn-registar" (click)="isLogin = false">Registrar</button> <!-- Asegúrate de que este botón llama a onRegister -->
+  <button class="btn-registar" (click)="isLogin = false">Registrar</button> <!-- Aqui isLogin se conviere a false -->
 </div>
 
 
