--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,8 +1,8 @@
 body{
-  background-image: url('wallpaper.jpg'); /* Cambia esta ruta a la imagen que desees */
-  background-size: cover; /* La imagen cubrirá todo el fondo */
-  background-position: center; /* Centra la imagen */
-  background-repeat: no-repeat; /* Evita que se repita */
+  background-image: url('wallpaper.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   margin: 0;
   padding-left: 20px;
   height: 100vh;
@@ -16,11 +16,11 @@ body{
  /* Estilo para el contenido */
  .overlay-content {
   text-align: center;
-  color: white; /* Color del texto */
-  background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro semitransparente */
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8);
   padding: 20px;
-  border-radius: 10px; /* Bordes redondeados */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Sombra para resaltar el contenedor */
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .overlay-content button {
@@ -61,4 +61,81 @@ button {
   padding: 10px 20px;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
+}
+
+
+/* Adaptación  para iPhone 15 Pro */
+@media (max-width: 1179px) {
+  body {
+    padding-left: 0;
+    height: 682px;
+  }
+
+  .overlay-content {
+    padding: 15px;
+    border-radius: 8px;
+    max-width: 90%;
+
+  }
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .bienvenidos {
+    font-size: 1.5rem;
+  }
+
+  .cinema {
+    font-size: 2rem;
+  }
+
+  button {
+    font-size: 14px;
+    padding: 10px 16px;
+  }
+}
+
+
+@media (min-width: 393px) and (max-width: 852px) {
+
+  .overlay-content {
+    padding: 15px;
+    border-radius: 8px;
+    max-width: 90%;
+    /* height: 450px; */
+    width: 300px;
+
+
+
+
+  }
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .bienvenidos {
+    font-size: 1.5rem;
+  }
+
+  .cinema {
+    font-size: 2rem;
+  }
+
+  button {
+    font-size: 14px;
+    padding: 10px 16px;
+  }
+  .overlay-content button {
+
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: #0ff153;
+    color: #333;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
 }
