--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -264,7 +264,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #0099ff; /* Cambia el color de fondo cuando el cursor está encima */
+  background-color: #0099ff;
 }
 
 /* Close button */
@@ -301,24 +301,6 @@ button[type="submit"]:hover {
   background-color: #00a2ff;
 }
 
-/* Modal layout adjustments for smaller screens */
-@media (max-width: 480px) {
-  .modal-container {
-    width: 90%;
-  }
-
-  .modal-container h3 {
-    font-size: 1.2em;
-  }
-
-  form input {
-    padding: 10px;
-  }
-
-  button[type="submit"] {
-    padding: 10px;
-  }
-}
 
 /* Estilo para la imagen del producto */
 .product-image {
@@ -336,4 +318,190 @@ button[type="submit"]:hover {
   border-radius: 5px;
   object-fit: cover;
   margin-right: 10px;
+}
+
+
+@media (max-width: 393px) {
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url('dunee2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding-left: 70px;
+    padding-bottom: 70px;
+  }
+
+  .profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    max-width: 270px;
+    margin: 20px auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .avatar-container {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid #007bff;
+    margin-bottom: 20px;
+  }
+
+  .avatar {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .user-info {
+    text-align: center;
+  }
+
+  .ProfileText {
+
+    font-family: "Orbitron", sans-serif;
+    color: white;
+    font-size: 12px;
+  }
+
+  .user-name {
+    font-size: 12px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 10px 0;
+  }
+
+  .user-email {
+    font-size: 1rem;
+    color: #ffffff;
+  }
+
+  .user-saldo {
+    font-size: 1rem;
+    color: #fffefe;
+  }
+
+
+  .admin-options {
+    margin-top: 30px;
+    padding: 20px;
+    border: 2px solid #ff5722;
+    border-radius: 8px;
+    background-color: #fff3e0;
+  }
+
+  .admin-options h3 {
+    color: #e64a19;
+    margin-bottom: 15px;
+    font-size: 10px;
+  }
+
+  /* Estilo para los botones de administrador */
+  .admin-options button {
+    display: inline-block;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 10px;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #ee850d;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+  }
+
+  .admin-options button:hover {
+    background-color: #e64a19;
+    transform: scale(1.05);
+  }
+
+  .admin-options button:active {
+    background-color: #d84315;
+    transform: scale(0.95);
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+  }
+
+  thead th {
+    background: #ee850d;
+    color: white;
+    padding: 10px;
+    font-size: 10px;
+  }
+
+  tbody td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .modal-container {
+    width: 90%;
+  }
+
+  .modal-container h3 {
+    font-size: 10px;
+  }
+
+  form input {
+    padding: 10px;
+  }
+
+  button[type="submit"] {
+    padding: 10px;
+  }
+
+  .user-avatar{
+    width: 35px;
+    height: auto;
+    border-radius: 5px;
+    object-fit: cover;
+    margin-right: 10px;
+  }
+
+  .delete-btn {
+    margin-top: 10px;
+    padding: 10px 15px;
+    background: #d32f2f;
+    color: white;
+    height: 31px;
+    width: 57px;
+    border: none;
+    margin-left: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+
+  }
+
+  .EditDeleteButton {
+    margin-top: 10px;
+    padding: 10px 15px;
+    margin-left: 5px;
+    font: 1em;
+    height: 31px;
+    width: 57px;
+    background: #3d9ddd;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+
 }
